# entering-uv

./: .gitignore  README.md  pyproject.toml  ruff.toml  set_git_conf.sh  setup.py  slide.md  starship.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.themes/: thin-gaia.css
docs/: slide.md
docs/themes/: gaia-extend.css
scripts/: run_loguru.py  run_pandas_fail.py
src/: cli.py
tool/: __init__.py  __version__.py  cli.py
