[project]
name = "tool"
version = "0.1.0"
description = "docs for entering uv"
authors = [{ name = "Xilorole" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "git-filter-repo>=2.47.0",
    "loguru>=0.7.3",
]

[project.scripts]
tool = "tool.cli:cli"

[tool.uv]
package = true
